# naat-db

./: README.md  pyproject.toml
.github/workflows/: tests.yaml
artifacts/: __init__.py
naat_bdd/: __init__.py  init_db.sql
naat_bdd/models/: Agent.sql  AgentParty.sql  AgentType.sql  AppealType.sql  Decision.sql  DecisionGround.sql  DecisionResource.sql  DecisionStatus.sql  Ground.sql  GroundType.sql  Jurisdiction.sql  LegalCase.sql  LegalCaseAgent.sql  LegalCaseStatus.sql  Resource.sql  ResourceType.sql
notebooks/: initialization.ipynb
