# https://python-poetry.org/docs/pyproject/
[tool.poetry]
name = "naat-bdd"
version = "0.1.0"
description = "Database for NAAT"
authors = ["Clément Brutti-Mairesse <clement.brutti.mairesse@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ClementBM/naat-bdd"
repository = "https://github.com/ClementBM/naat-bdd"
keywords = ["database", "climate cases"]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.10"
duckdb = "^0.10.0"

[tool.poetry.dev-dependencies]
pylint = "*"
pytest = "*"
mypy = "*"
jupyter = "*"
notebook = "*"
ipykernel = "*"
black = "*"
sphinx = "*"
sphinx-rtd-theme = "*"
coverage = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"